k8s/nacos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  labels:
    app: nacos
spec:
  selector:
    matchLabels:
      app: nacos
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: nacos
    spec:
      containers:
        - name: nacos
          image: nacos/nacos-server:v2.2.1
          ports:
            - containerPort: 8848
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
spec:
  selector:
    app: nacos
  ports:
    - name: tcp
      port: 8848
      protocol: TCP
      targetPort: 8848
