k8s/demo-dr-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: provider-demo
spec:
  host: provider-demo
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: provider-demo
spec:
  hosts:
    - provider-demo
  http:
    - route:
        - destination:
            host: provider-demo
            subset: v1
          weight: 100
        - destination:
            host: provider-demo
            subset: v2
          weight: 0
